<resources>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="app_name">Eco Ride HCL</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log In!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="student_name">Student Name</string>
    <string name="id">ID</string>
    <string name="availability_status">Availability Status</string>
    <string name="color">Color</string>
    <string name="location">Location</string>
    <string name="Super">super\n</string>
    <string name="employee_id">Employee Id</string>
    <string name="email">Email</string>
    <string-array name="languages">
        <item>Employee</item>
        <item>Security</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empid">EmpId</string>

    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>


</resources>