<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cyc"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000" />

        <TextView
            android:id="@+id/cId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cyc"
            android:layout_marginLeft="10dp"
            android:text="Cycle Id:"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/cid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cId"
            android:layout_marginLeft="75dp"
            android:text="@string/id"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cyc"
            android:layout_below="@+id/cid"
            android:layout_marginLeft="10dp"
            android:text="Availability Status:"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Availability"
            android:layout_below="@+id/cid"
            android:layout_marginLeft="10dp"
            android:text="@string/availability_status"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/Color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cyc"
            android:layout_below="@+id/availability"
            android:layout_marginLeft="10dp"
            android:text="Color:"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Color"
            android:layout_below="@+id/availability"
            android:layout_marginLeft="90dp"
            android:text="@string/color"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cyc"
            android:layout_below="@+id/color"
            android:layout_marginLeft="10dp"
            android:text="Location:"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/location"
            android:layout_below="@+id/color"
            android:layout_marginLeft="70dp"
            android:text="@string/location"
            android:textColor="#000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/Location"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update"
                android:backgroundTint="@color/blue"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="@android:color/white"
                android:layout_marginStart="9dp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
